Install Tailwind CSS

--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vue/eslint-config-standard": "^6.1.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.6.0",
-    "nuxt3": "latest"
+    "nuxt3": "latest",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
