--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --ext .js,.ts,.vue --ignore-path .gitignore . --fix"
+    "lintfix": "eslint --ext .js,.ts,.vue --ignore-path .gitignore . --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/vue3": "^6.4.22",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vue/eslint-config-standard": "^6.1.0",
     "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
@@ -19,6 +28,8 @@
     "eslint-plugin-vue": "^8.6.0",
     "nuxt3": "latest",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3",
+    "vue-loader": "^16.8.3"
   }
 }
